# spectrum

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.superpowers/brainstorm/56221-1776318741/: .server-stopped  call-workbench-30min-example.html  call-workbench-30min-readable.html  call-workbench-layout.html  single-vs-group-view-toggle.html  voice-explorer-ga-style.html  waiting-group-outline.html  waveform-highlight-options.html
data/manifests/: datasets.json
docs/brainstorms/: 2026-04-24-human-ai-voice-debugging-requirements.md
examples/: README.md  curl.md  quickstart.py
examples/conversation_reports/: README.md  index.html  sample_reports.json
fixtures/demo_samples/: README.md  manifest.json
output/: Spectrum_Live_Demo_Pitch.pptx  Spectrum_Live_Demo_Script.md
scripts/: bootstrap_demo_sessions.py  build_pitch_deck.py  dev.sh  download_datasets.py  run_benchmarks.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/analysis/: page.tsx
src/app/api/sample-audio/[file]/: route.test.ts  route.ts
src/app/calls/: page.tsx
src/components/app/: analysis-workspace.test.tsx  analysis-workspace.tsx  app-header.test.tsx  app-header.tsx  app-sidebar.tsx  calls-view.test.tsx  calls-view.tsx  dashboard-view.test.tsx  dashboard-view.tsx  echart.tsx  embedding-plot.test.tsx  embedding-plot.tsx  emotion-graph.test.tsx  emotion-graph.tsx  waveform-panel.test.tsx  waveform-panel.tsx
src/components/ui/: chart.tsx  sidebar.tsx
src/lib/: analysis-scope.test.ts  analysis-scope.ts  mock-data.test.ts  mock-data.ts  navigation.test.ts  navigation.ts  sample-waveform.ts  types.ts
src/lib/repositories/: analysis-repository.ts  calls-repository.ts  insights-repository.ts  waveform-repository.ts
tests/: test_api.py  test_download_datasets.py  test_models.py  test_pipeline.py  test_scaffold_smoke.py
