[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum"
version = "0.1.0"
description = "Spectrum voice profiling and conversation analytics scaffold."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10,<1",
  "numpy>=1.26,<3",
  "soundfile>=0.12,<1",
]
demo = [
  "pyarrow>=18,<20",
]
server = [
  "uvicorn[standard]>=0.30,<1",
]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["packages/core", "packages/pipeline", "packages/api"]
include = ["spectrum_core*", "spectrum_api*", "spectrum_pipeline*"]

[tool.pytest.ini_options]
pythonpath = [
  "packages/core",
  "packages/pipeline",
  "packages/api",
]
testpaths = ["tests"]
